a lot that should have been broken up in several commits
