# src/handlers/db/category/remove-category-from-user-prefs.js
@@ -18,7 +18,7 @@ expected body:
  */
 exports.handler = async (event, context) => {
     await client.connect();
-    const { user } = JSON.parse(event.body);
+    const { user } = event.body;
     const query = {
         text: "select removeCategoryFromUserPreferences($1, $2)",
         values: [user.username, user.category],
@@ -32,7 +32,9 @@ exports.handler = async (event, context) => {
         for (const row of res.rows) {
             arr.push(...row)
         }
-        event.result.data=arr;
+        event.result.body={
+            categories: arr
+        }
     } finally {
         client.end();
     }
